BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithoutProfilesXLation/src/objects/EM_Speaker_vod__c.object
<CustomObject>
    <fields>
        <fullName>Hourly_Rate_HCPTS__c</fullName>
        <description>Hourly Rate</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Provider_Type_Simple_Formula_HCPTS__c</fullName>
        <description>If Customer reference exists, value is either HCP for Individual Customers or HCO for Org Customers</description>
        <formula>IF(ISBLANK(Account_vod__c), &apos;&apos; ,
     IF(Account_vod__r.IsPersonAccount,  $Label.Audience_Provider_Type_HCP ,
        $Label.Audience_Provider_Type_HCO
        )
)</formula>
        <inlineHelpText>If Customer reference exists, value is either HCP for Individual Customers or HCO for Org Customers</inlineHelpText>
        <label>Provider Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type_HCPTS__c</fullName>
        <description>Hourly
Daily
Fixed</description>
        <inlineHelpText>Hourly
Daily
Fixed</inlineHelpText>
        <label>Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The status of a speaker.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Nominated_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_to_Date_Utilization_vod__c</fullName>
        <description>Number of times a speaker has spoken this year to date.</description>
        <inlineHelpText>Number of times a speaker has spoken this year to date.</inlineHelpText>
        <label>Year to Date Utilization</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Service_Provider_Simple_HCPTS</fullName>
        <active>true</active>
        <description>Service Provider</description>
        <label>Service Provider</label>
    </recordTypes>
</CustomObject>